manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: truzzles
    namespace: truzzles
    labels:
        app: truzzles
spec:
    replicas: 3
    selector:
        matchLabels:
            app: truzzles
    template:
        metadata:
            labels:
                app: truzzles
        spec:
            containers:
                - name: truzzles
                  image: "trueberryless/truzzles:main-c4d8505be4dc1fd9c3b90284eed8dc26c93aa62b"
                  imagePullPolicy: Always
