manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: truzzles
    namespace: truzzles
spec:
    rules:
        - host: truzzles.trueberryless.org
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: truzzles
                            port:
                                number: 80

    tls:
        - hosts:
              - truzzles.trueberryless.org
          secretName: truzzles
